Some fleshed out updates, save point

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MR VookmirVookmir</title> <!--change this every time-->
     <link rel="stylesheet"  href="./assets/css/reset.css" /> 
+    <<link href="https://fonts.googleapis.com/css2?family=IM+Fell+English:ital@0;1&display=swap" rel="stylesheet">
     <link rel="stylesheet"  href="./assets/css/style.css" />
     <!--make sure these are up to date-->
   </head>
@@ -25,7 +26,7 @@
 
     <section>
         <div id=jumbotron>X</div>
-        <h2>cool text off to the side using z</h2>
+        <h2>I am, but a humble machine priest</h2>
     </section>
 
     <section class=contentsidebar>
@@ -37,7 +38,7 @@
     <section></section>
         <main class=content>
         <div id=mybodycard >
-            <p class=mybody> Blah Blah BlahBlah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah </p>
+            <p class=mybody> And so I commit in the letters of my people my story such as it is.   </p>
 
         </div>
 
