--- a/index.html
+++ b/index.html
@@ -39,23 +39,24 @@
         <main class=content>
         <div id=mybodycard >
             <p class=mybody> And so I commit in the letters of my people; my story such as it is.
-                Not long ago, I found myself ministering to the great ultracolds used by the Seton Tribe. 
+                 Not long ago, I found myself ministering to the great ultracolds used by the Seton Tribe. 
                 they stored within them water that boiled when exposed to the air. Within them was the means
                 to save a life. At the cost of one. 80% of all pediatric heart valves were under my watch. 
             <br>
             <br>
-                 Alas, no longer. I sought the wisdom of the of the fabricator.
-                 With my own eyes I watched as form was pulled up with will alone. Only once I had witnessed
-                 the greatness first hand of the industrial behemouth did I know my true calling.
-                                To commune with the divine.
-                                                     To speak the linga techna. The magic of code. 
+                 Alas, that is no longer. Closed like the pages of book.
+             I then sought the wisdom of the of the fabricator.
+             With my own eyes I watched as form was pulled up with will alone. 
+             Only once I had witnessed the greatness first hand of the industrial behemouth did I know my true calling.
+                  To commune with the divine.
+                To speak the linga techna. The magic of code. 
              </p>
 
         </div>
 
         <div class=card>
             <div id=maincard>
-            <header class=minicardheader>Opus Majus</header>
+            <header class=maincardheader>Opus Majus</header>
             <!-- <img id="mainpic" src="../02BootCampHomeworkMR/assets/images/test1.png" alt="Main picture"/> -->
             </div>
         </div>
