--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
          <nav class="text-right">  <!--class is directiond data-->
             <ul> <!--href is link, # is placehodler-->
                  <li> <a href="#aboutme">About Me</a></li>
-                 <li> <a href="#work">Work</a></li>
-                 <li> <a href="#contact">Contact</a></li>
+                 <li> <a href="#mywork">Work</a></li>
+                 <li> <a href="#contactme">Contact</a></li>
                  <li> <a href="https://github.com/">Github</a></li>
             <!--#contact is an id= and sends to a part of the page-->  
              </ul>
