README update and addition of page screencap

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                  <li> <a href="#aboutme">About Me</a></li>
                  <li> <a href="#mywork">Work</a></li>
                  <li> <a href="#contactme">Contact</a></li>
-                 <li> <a href="https://github.com/">Github</a></li>
+                 <li> <a href="https://github.com/VookmirVookmir">Github</a></li>
             <!--#contact is an id= and sends to a part of the page-->  
              </ul>
         </nav>
